--- a/PageObjectModel/test-output/old/Default suite/methods.html
+++ b/PageObjectModel/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ed89b">  <td>23/04/04 21:04:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestMethods_GoogleSearch.aftertest()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@3e27ba32]">&lt;&lt;aftertest</td> 
+<tr bgcolor="8ed89b">  <td>23/04/04 21:15:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethods_GoogleSearch.VerifyAndAccessFacebook()[pri:1, instance:Test_Scenarios.TestMethods_GoogleSearch@7ef82753]">VerifyAndAccessFacebook</td> 
+  <td>main@1732238286</td>   <td></td> </tr>
+<tr bgcolor="8ed89b">  <td>23/04/04 21:15:37</td>   <td>-9978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethods_GoogleSearch.SearchOperation()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@7ef82753]">SearchOperation</td> 
+  <td>main@1732238286</td>   <td></td> </tr>
+<tr bgcolor="8ed89b">  <td>23/04/04 21:15:51</td>   <td>4639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethods_GoogleSearch.VerifyLogin()[pri:2, instance:Test_Scenarios.TestMethods_GoogleSearch@7ef82753]">VerifyLogin</td> 
+  <td>main@1732238286</td>   <td></td> </tr>
+<tr bgcolor="8ed89b">  <td>23/04/04 21:15:52</td>   <td>5418</td> <td>&nbsp;</td><td title="&lt;&lt;TestMethods_GoogleSearch.aftertest()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@7ef82753]">&lt;&lt;aftertest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="8ed89b">  <td>23/04/04 21:03:51</td>   <td>-14885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethods_GoogleSearch.SearchOperation()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@3e27ba32]">SearchOperation</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="8ed89b">  <td>23/04/04 21:04:01</td>   <td>-4730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethods_GoogleSearch.VerifyAndAccessFacebook()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@3e27ba32]">VerifyAndAccessFacebook</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="8ed89b">  <td>23/04/04 21:03:48</td>   <td>-17536</td> <td>&nbsp;</td><td title="&gt;&gt;TestMethods_GoogleSearch.beforetest()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@3e27ba32]">&gt;&gt;beforetest</td> 
+<tr bgcolor="8ed89b">  <td>23/04/04 21:15:34</td>   <td>-12372</td> <td>&nbsp;</td><td title="&gt;&gt;TestMethods_GoogleSearch.beforetest()[pri:0, instance:Test_Scenarios.TestMethods_GoogleSearch@7ef82753]">&gt;&gt;beforetest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
 </table>
