--- a/PageObjectModel/test-output/emailable-report.html
+++ b/PageObjectModel/test-output/emailable-report.html
@@ -8,13 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,438</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">18,939</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Test_Scenarios.TestMethods_GoogleSearch</td><td><a href="#m0">SearchOperation</a></td><td rowspan="1">1680657337269</td><td rowspan="1">9975</td></tr><tr class="passedeven"><td><a href="#m1">VerifyAndAccessFacebook</a></td><td rowspan="1">1680657347247</td><td rowspan="1">4636</td></tr><tr class="passedeven"><td><a href="#m2">VerifyLogin</a></td><td rowspan="1">1680657351886</td><td rowspan="1">777</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Test_Scenarios.TestMethods_GoogleSearch</td><td><a href="#m0">VerifyLogin</a></td><td rowspan="1">1680658180358</td><td rowspan="1">904</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test_Scenarios.TestMethods_GoogleSearch</td><td><a href="#m1">SearchOperation</a></td><td rowspan="1">1680658165449</td><td rowspan="1">10426</td></tr><tr class="passedeven"><td><a href="#m2">VerifyAndAccessFacebook</a></td><td rowspan="1">1680658175878</td><td rowspan="1">4479</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Test_Scenarios.TestMethods_GoogleSearch#SearchOperation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test_Scenarios.TestMethods_GoogleSearch#VerifyAndAccessFacebook</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Test_Scenarios.TestMethods_GoogleSearch#VerifyLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Test_Scenarios.TestMethods_GoogleSearch#VerifyLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Facebook - log in or sign up] but found []
+	at Objects.FacebookPage.VerifyLogin(FacebookPage.java:31)
+	at Test_Scenarios.TestMethods_GoogleSearch.VerifyLogin(TestMethods_GoogleSearch.java:47)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test_Scenarios.TestMethods_GoogleSearch#SearchOperation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test_Scenarios.TestMethods_GoogleSearch#VerifyAndAccessFacebook</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
