--- a/RESTAssuredAutomation/test-output/emailable-report.html
+++ b/RESTAssuredAutomation/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,934</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,904</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.PutPatchDeleteExamples</td><td><a href="#m0">testDelete</a></td><td rowspan="1">1681758201772</td><td rowspan="1">1253</td></tr><tr class="passedeven"><td><a href="#m1">testPatch</a></td><td rowspan="1">1681758203028</td><td rowspan="1">345</td></tr><tr class="passedeven"><td><a href="#m2">testPut</a></td><td rowspan="1">1681758203375</td><td rowspan="1">298</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.TestsOnLocalAPI</td><td><a href="#m0">delete</a></td><td rowspan="1">1681867632285</td><td rowspan="1">2875</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.PutPatchDeleteExamples#testDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.PutPatchDeleteExamples#testPatch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.PutPatchDeleteExamples#testPut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.TestsOnLocalAPI#delete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
