--- a/RESTAssuredAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/RESTAssuredAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81a7ac">  <td>23/04/17 15:03:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutPatchDeleteExamples.testDelete()[pri:0, instance:tests.PutPatchDeleteExamples@f736069]">testDelete</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>23/04/17 15:03:23</td>   <td>1256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutPatchDeleteExamples.testPatch()[pri:0, instance:tests.PutPatchDeleteExamples@f736069]">testPatch</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>23/04/17 15:03:23</td>   <td>1603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutPatchDeleteExamples.testPut()[pri:0, instance:tests.PutPatchDeleteExamples@f736069]">testPut</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>23/04/18 21:27:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestsOnLocalAPI.delete()[pri:0, instance:tests.TestsOnLocalAPI@7fee8714]">delete</td> 
+  <td>main@1446983876</td>   <td></td> </tr>
 </table>
