--- a/RESTAssuredAutomation/test-output/old/Default suite/classes.html
+++ b/RESTAssuredAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.JSONSchemmaValidator</td>
+<td>tests.SoapXMLRequest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testGet</td>
+<td>validateSoapXML</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
